src/objects/SPE_KPIStats__c.object
<CustomObject>
    <fields>
        <fullName>ExecutionPeriod__c</fullName>
        <label>Execution Period</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI Stats</relationshipLabel>
        <relationshipName>KPI_Stats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Records__c</fullName>
        <label>Records</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI Stats</label>
    <nameField>
        <displayFormat>KS-{00000}</displayFormat>
        <label>KPI Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>